@startuml

entity Items {
  itemId : INT [PK]
  --
  itemCategoryId : INT [FK]
  makerId : INT [FK]
  --
  itemName : VARCHAR
  linkUrl : VARCHAR
  imageUrl : VARCHAR
  desc : VARCHAR
  price : INT
  rank : INT
  flag1 : INT
  flag2 : INT
  releaseDate : VARCHAR
  outdated : BOOLEAN
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

entity ItemCategories {
  itemCategoryId : INT [PK]
  --
  categoryName : VARCHAR
  isSingleChoice : INT
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

entity Makers {
  makerId : INT [PK]
  --
  makerName : VARCHAR
  makerFullName : VARCHAR
  country : VARCHAR
  makerUrl : VARCHAR
  logoUri : VARCHAR
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

entity Users {
  userId : VARCHAR [PK]
  --
  userName : VARCHAR
  userEmail : VARCHAR
  password : VARCHAR
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

entity Assemblies {
  assemblyId : INT [PK]
  --
  ownerUserId : VARCHAR [FK]
  --
  assemblyName : VARCHAR
  assemblyUrl : VARCHAR
  ownerComment : VARCHAR
  referenceAssemblyId : INT?
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

entity AssemblyDetails {
  detailId : INT [PK]
  --
  assemblyId : INT [FK]
  itemId : INT [FK]
  --
  priceAtRegistered : INT
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

entity favoriteItems {
  id : INT [PK]
  --
  ownerUserId : VARCHAR [FK]
  itemId : INT [FK]
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

entity favoriteMakers {
  id : INT [PK]
  --
  ownerUserId : VARCHAR [FK]
  makerId : INT [FK]
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

entity favoriteAssemblies {
  id : INT [PK]
  --
  ownerUserId : VARCHAR [FK]
  assemblyId : INT [FK]
  --
  createdAt : TIMESTAMP
  updatedAt : TIMESTAMP
}

Items }|--|| ItemCategories
Items }|--|| Makers
AssemblyDetails }|--|| Assemblies
AssemblyDetails }o--|{ Items
Users ||--|{ Assemblies
Users ||--|{ favoriteItems
Users ||--|{ favoriteMakers
Users ||--|{ favoriteAssemblies
favoriteItems }o--|| Items
favoriteMakers }o--|| Makers
favoriteAssemblies }|--|| Assemblies

@enduml
